# homelab

./: BUILD.bazel  MODULE.bazel  bootstrap.sh  k3d.yaml  mise.toml
apps/: BUILD.bazel  Makefile  grafana.libsonnet  jsonnetfile.json  jsonnetfile.lock.json
apps/guestbook/: frontend.libsonnet  main.libsonnet  redis.libsonnet
apps/libs/: container.libsonnet  deployment.libsonnet  labels.libsonnet  main.libsonnet  service.libsonnet  utils.libsonnet
apps/libs/argocd/: app.libsonnet  main.libsonnet
